Login and User Creation Update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="loginSignIn">"Sign In"</string>
     <string name="loginCreateAccount">"Create Account"</string>
     <string name="loginImageDescription">"ImgHeader"</string>
+    <string name="loginEmail">"Email"</string>
     <!-- main -->
     <string name="mainMotivation">"REMEMBER why you do what you do!"</string>
     <string name="MainDrawer">"Main Drawer"</string>
