--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="AdapterTab">"View"</string>
     <string name="weeklyTabFloating">"Mail floating action button"</string>
     <string name="weeklyTabDateTxt">"Date Selection"</string>
+    <string name="weeklyTabSubmit">"Submit"</string>
 </resources>
